# alt-controller-jam

./: .gitignore  README.md  devenv.nix  justfile  pyproject.toml
boards/circuitpython/: boot.py  code.py
controller/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch
dpad/: 20 Alt controller case_0.4n_0.2mm_PETG_MK4IS_4h8m.bgcode  Alt controller case.stl  Alt controller case_0.4n_0.2mm_PETG_MK4IS_11m.bgcode  Alt controller case_0.4n_0.2mm_PETG_MK4IS_13m.bgcode  dpad.kicad_pcb  dpad.kicad_prl  dpad.kicad_pro  dpad.kicad_sch  dpad.step  dpad.stl  fp-info-cache
dpad/dpad-fab/: dpad-B_Cu.gbr  dpad-B_Mask.gbr  dpad-B_Paste.gbr  dpad-B_Silkscreen.gbr  dpad-Edge_Cuts.gbr  dpad-F_Cu.gbr  dpad-F_Mask.gbr  dpad-F_Paste.gbr  dpad-F_Silkscreen.gbr  dpad-NPTH.drl  dpad-PTH.drl  dpad-job.gbrjob
kikad-tutorial/: kikad-tutorial.csv  kikad-tutorial.kicad_pcb  kikad-tutorial.kicad_prl  kikad-tutorial.kicad_pro  kikad-tutorial.kicad_sch  kikad-tutorial.xml
kikad-tutorial/plot/: kikad-tutorial-B_Cu.gbr  kikad-tutorial-B_Mask.gbr  kikad-tutorial-B_Paste.gbr  kikad-tutorial-B_Silkscreen.gbr  kikad-tutorial-Edge_Cuts.gbr  kikad-tutorial-F_Cu.gbr  kikad-tutorial-F_Mask.gbr  kikad-tutorial-F_Paste.gbr  kikad-tutorial-F_Silkscreen.gbr  kikad-tutorial-NPTH.drl  kikad-tutorial-PTH.drl  kikad-tutorial-job.gbrjob
src/alt_controller_jam/: configurations.py  hardware.py  hid_gamepad.py  hid_keyboard.py  hid_simple_gamepad.py  joystick.py  keyboard.py  usb_hid_gamepad.py  usb_hid_ps3.py
src/alt_controller_jam/experiments/: hid_simple_gamepad.py
