[tool.poetry]
name = "alt-controller-jam"
version = "0.1.0"
description = "Gamecraft Alt-Controller-Jam 2023 Code"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "alt_controller_jam", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
adafruit-circuitpython-hid = "^6.0.1"
turbocase = {git = "https://git.sr.ht/~martijnbraam/turbocase"}

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
circup = "*"
rshell = "*"
pipkin = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
